--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@expo/webpack-config": "^0.17.2",
     "@miblanchard/react-native-slider": "^2.2.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/datetimepicker": "^6.7.3",
+    "@react-native-community/datetimepicker": "6.5.2",
     "expo": "~47.0.12",
+    "expo-document-picker": "~11.0.1",
+    "expo-file-system": "~15.1.1",
+    "expo-sharing": "~11.0.1",
     "expo-splash-screen": "~0.17.5",
+    "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
     "react": "^18.0.0",
@@ -28,11 +32,7 @@
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
-    "tailwindcss-react-native": "^1.7.10",
-    "expo-sqlite": "~11.0.0",
-    "expo-sharing": "~11.0.1",
-    "expo-file-system": "~15.1.1",
-    "expo-document-picker": "~11.0.1"
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
