--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@miblanchard/react-native-slider": "^2.2.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "6.5.2",
+    "adb": "^0.2.0",
     "expo": "~47.0.12",
     "expo-document-picker": "~11.0.1",
     "expo-file-system": "~15.1.1",
