--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@miblanchard/react-native-slider": "^2.2.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "6.5.2",
+    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/native-stack": "^6.9.9",
     "adb": "^0.2.0",
     "expo": "~47.0.12",
     "expo-document-picker": "~11.0.1",
