--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-debugger": "^1.1.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
