--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/material-bottom-tabs": "^6.2.12",
     "@react-navigation/native-stack": "^6.9.9",
     "adb": "^0.2.0",
     "expo": "~47.0.12",
@@ -28,6 +29,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-debugger": "^1.1.0",
+    "react-native-paper": "^5.1.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
